Workaround for the scrollbar issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -41,6 +41,10 @@ body {
 .rsc-container {
   height: 100%;
 }
+.rsc-content {
+  box-sizing: content-box;
+  padding-right: 17px;
+}
 .rsc-input:disabled {
     display: none;
 }
